테스트 문항 수정

--- a/test-form.html
+++ b/test-form.html
@@ -302,15 +302,15 @@
             </div>
             <div class="option" data-value="explorer" data-orbit="explorer">
                 <span class="option-number">1</span>
-                <span class="option-text">아직 관심만 있고, 어디서부터 시작해야 할지 모르겠어요</span>
+                <span class="option-text">유용한 AI 툴이 많다는데, 어떤 것부터 시작해야 할지 모르겠어요.</span>
             </div>
             <div class="option" data-value="maker" data-orbit="maker">
                 <span class="option-number">2</span>
-                <span class="option-text">문서 작성·요약 등 기본 툴은 써요. 더 잘 쓰고 싶어요</span>
+                <span class="option-text">문서 작성이나 요약할 때 기본 툴은 써요. 지금보다 더 잘 쓰고 싶어요.</span>
             </div>
             <div class="option" data-value="navigator" data-orbit="navigator">
                 <span class="option-number">3</span>
-                <span class="option-text">이미 팀 단위로 AI를 도입하거나, 전략을 고민하고 있어요</span>
+                <span class="option-text">이미 AI를 적극 활용하고, 팀과 전사에 확산시킬 전략을 고민하고 있어요.</span>
             </div>
             <div class="nav-buttons">
                 <button class="btn btn-next" id="nextQ1" disabled>다음</button>
@@ -325,11 +325,11 @@
             </div>
             <div class="option" data-value="maker" data-orbit="maker">
                 <span class="option-number">1</span>
-                <span class="option-text">ChatGPT·생성형AI를 활용한 업무 자동화</span>
+                <span class="option-text">ChatGPT 등 생성형AI를 활용한 업무 자동화</span>
             </div>
             <div class="option" data-value="navigator" data-orbit="navigator">
                 <span class="option-number">2</span>
-                <span class="option-text">AI로 새로운 비즈니스·서비스를 기획하는 일</span>
+                <span class="option-text">AI로 새로운 비즈니스나 서비스를 만드는 일</span>
             </div>
             <div class="option" data-value="explorer" data-orbit="explorer">
                 <span class="option-number">3</span>
@@ -349,15 +349,15 @@
             </div>
             <div class="option" data-value="maker" data-orbit="maker">
                 <span class="option-number">1</span>
-                <span class="option-text">AI를 잘 쓰는 '일잘러'가 되고 싶어요</span>
+                <span class="option-text">AI를 잘 활용하는 '일잘러'가 되고 싶어요.</span>
             </div>
             <div class="option" data-value="navigator" data-orbit="navigator">
                 <span class="option-number">2</span>
-                <span class="option-text">AI를 팀과 회사에 전파하고 싶어요</span>
+                <span class="option-text">AI로 팀과 회사를 더 크게 성장시키고 싶어요.</span>
             </div>
             <div class="option" data-value="explorer" data-orbit="explorer">
                 <span class="option-number">3</span>
-                <span class="option-text">AI가 뭔지부터 배우고 싶어요</span>
+                <span class="option-text">AI를 어떻게 써야하는지부터 배우고 싶어요.</span>
             </div>
             <div class="nav-buttons">
                 <button class="btn btn-prev" id="prevQ3">이전</button>
