--- a/result.html
+++ b/result.html
@@ -326,7 +326,7 @@
 
             <!-- 추천 세미나 -->
             <div class="seminar-section">
-                <h3>🎯 당신을 위한 추천 세미나</h3>
+                <h3>당신을 위한 추천 세미나</h3>
                 <ul class="seminar-list" id="seminarList"></ul>
             </div>
 
@@ -368,7 +368,7 @@
                 icon: '🌟',
                 badge: 'Explorer Orbit',
                 title: '당신은 탐험가예요!',
-                description: 'AI가 뭔지 궁금하고, 새로운 세계를 탐험 중이에요.<br>아직은 낯설지만 "이거 신기한데?" 하면서 하나씩 찾아보고 시도하는 중이죠.<br>ChatGPT를 처음 써보거나, AI 뉴스를 관심있게 보거나,<br>"나도 한 번 써볼까?" 하는 그 마음이 바로 탐험의 시작입니다.<br>호기심으로 시작하는 이 순간이 가장 중요합니다.<br>모든 여정은 이렇게 시작됩니다!',
+                description: 'AI라는 새로운 세계를 탐험 중이에요.<br>아직은 낯설지만 "이거 신기한데?" 하면서 하나씩 찾아보고 시도하는 중이죠.<br>ChatGPT를 처음 써보거나, AI 뉴스를 관심있게 보거나, "나도 한 번 써볼까?" 하는 그 마음이 바로 탐험의 시작입니다.<br>호기심으로 시작하는 이 순간이 가장 중요합니다.<br>모든 여정은 이렇게 시작됩니다!',
                 keywords: ['호기심', '탐색', '시작'],
                 seminars: [
                     {
@@ -384,7 +384,7 @@
                     {
                         rank: '🥉',
                         name: '모두해유',
-                        desc: 'AI 실무 사례 공유하며 배우기'
+                        desc: '다양한 AI 실무 사례 공유하며 현직자들과 네트워킹!'
                     }
                 ]
             },
@@ -392,7 +392,7 @@
                 icon: '⚡',
                 badge: 'Maker Orbit',
                 title: '당신은 실천가예요!',
-                description: 'AI를 내 일에 활용하며, 실질적인 가치를 만들어가요.<br>"이거 AI로 더 빨리 못 할까?" 하면서<br>업무에 바로 적용하고 효율을 높이는 방법을 찾고 계시죠.<br>ChatGPT로 보고서를 작성하거나, 업무를 자동화하거나,<br>더 나은 프롬프트를 고민하는 당신.<br>실무에서 AI의 힘을 직접 체험하며 성장하고 있습니다.<br>이제 한 단계 더 깊이 들어갈 시간이에요!',
+                description: 'AI를 내 일에 활용하며, 실질적인 가치를 만들어가요.<br>"이거 AI로 더 빨리 못 할까?" 하면서 업무에 바로 적용하고 효율을 높이는 방법을 찾고 있죠.<br>ChatGPT로 보고서를 작성하거나, 업무를 자동화하거나, 더 나은 프롬프트를 고민하는 당신은 실무에서 AI의 힘을 직접 체험하며 성장하고 있습니다.<br>이제 한 단계 더 깊이 들어갈 시간이에요!',
                 keywords: ['실용', '적용', '효율'],
                 seminars: [
                     {
@@ -403,12 +403,12 @@
                     {
                         rank: '🥈',
                         name: 'AI 플레이그라운드',
-                        desc: '한번쯤 해보고 싶었던 진짜 업무 혁신, 직접 만들며 실력 향상!'
+                        desc: '한번쯤 해보고 싶던 업무 혁신, 직접 만들며 실력 향상!'
                     },
                     {
                         rank: '🥉',
                         name: '모두해유',
-                        desc: '지역 기업과 함께 성장하기'
+                        desc: '다양한 AI 실무 사례 공유하며 현직자들과 네트워킹!'
                     }
                 ]
             },
@@ -416,7 +416,7 @@
                 icon: '🚀',
                 badge: 'Navigator Orbit',
                 title: '당신은 선도자예요!',
-                description: 'AI의 가능성을 보고, 새로운 방향을 제시해요.<br>개인을 넘어 팀과 조직의 변화를 고민하고<br>AI를 전략적으로 활용하는 방법을 찾고 계시죠.<br>"우리 팀에 어떻게 도입할까?" "조직 문화를 어떻게 바꿀까?"<br>이런 질문을 던지며 더 큰 그림을 그리는 당신.<br>AI 시대의 전환을 이끄는 선도자로서<br>조직과 산업의 미래를 만들어가고 있습니다.',
+                description: 'AI의 가능성을 보고, 새로운 방향을 제시해요.<br>개인을 넘어 팀과 조직의 변화를 고민하면서 AI를 전략적으로 활용하는 방법을 찾고 있죠.<br>"우리 팀에 어떻게 도입할까?" "조직 문화를 어떻게 바꿀까?" 이런 질문을 던지며 더 큰 그림을 그리는 당신.<br>AI 시대의 전환을 이끄는 선도자로서 조직과 산업의 미래를 만들어가고 있습니다.',
                 keywords: ['전략', '비전', '리더십'],
                 seminars: [
                     {
