--- a/result.html
+++ b/result.html
@@ -340,7 +340,7 @@
                 <a href="test-form.html" class="btn btn-secondary">
                     다시 하기
                 </a>
-                <a href="#" class="btn btn-primary" id="alertBtn">
+                <a href="https://forms.gle/m8k9BUggy46gCU3TA" class="btn btn-primary" target="_blank">
                     세미나 알림 신청
                 </a>
             </div>
